Fixed styling for states dropdown to add scrollbar

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -13,3 +13,8 @@ h1 {
 .state-select {
   max-width: 15rem;
 }
+
+.dropdown-menu {
+  max-height: 15rem;
+  overflow-y: auto;
+}
